# 42-b3yond-6ug-crs-patches

./: README.md
.github/workflows/: bandfuzz.yml  cminplusplus.yml  corpusgrabber.yml  db.yml  gateway.yml  javaslicer.yml  patchagent.yml  primebuilder.yml  primesentinel.yml  sarif.yml  scheduler.yml  seedgen.yml  submitter.yml  triage.yml
components/bandfuzz/: .gitignore  Makefile  README.md  devbox.json  go.mod  (+2 more)
components/patchagent/: .gitignore  Dockerfile  README.md  pyproject.toml
components/patchagent/aixcc/: db.py  dump.py  env.py  utils.py
components/patchagent/patch_generator/: env.py  logger.py  main.py  mock.py  telemetry.py  utils.py
components/patchagent/patch_generator/builder/: __init__.py  builder.py  pool.py  utils.py
components/patchagent/patch_submitter/: main.py
components/patchagent/reproducer/: Dockerfile  README.md  __init__.py  build_utils.py  reproduce.py
components/patchagent/reproducer/scripts/: main.sh
components/patchagent/scripts/: patch_generator.sh  patch_submitter.sh
components/prime-build/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dind  README.md  dind_load_api.py  docker-compose.yml  entrypoint-dind.sh  entrypoint.sh  pyproject.toml  run.sh  run_build_job.py
components/prime-build/primebuilder/: config.py  main.py  rq_worker.py  utils.py  worker.py
components/sarif/src/code_injector/: CMakeLists.txt  code_injector.cpp  test.cpp
components/seedgen/: .cursorignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  litellm_config.yaml  my-oss-fuzz.py  oss-fuzz.py  prebuilt.dockerfile  pyproject.toml  requirements.txt  seedd.proto  standalone.py  task_handler.py  test_cot.py  treesitter_config.yaml
components/seedgen/.devcontainer/: Dockerfile  devcontainer.json
components/seedgen/argus/: Cargo.toml  README.md
components/seedgen/argus/src/: env.rs  main.rs
components/seedgen/argus/src/option_visitors/: additional_passes_visitor.rs  compilation_database_visitor.rs  mod.rs
components/seedgen/callgraph/llvm/: SeedMindCFPass.cpp  build.sh
components/seedgen/callgraph/runtime/: Cargo.toml
components/seedgen/callgraph/runtime/src/: error.rs  lib.rs
components/seedgen/experiments/: delta_experiment.sh  evaluate.sh  filtered_harness.csv  projects.csv
components/seedgen/infra/: aixcc.py  playground.py
components/seedgen/seedd/: Makefile  go.mod  go.sum
components/seedgen/seedd/cmd/seedd/: main.go
components/seedgen/seedd/internal/logging/: logger.go
components/seedgen/seedd/internal/runtime/: seedd.pb.go  seedd_grpc.pb.go
components/seedgen/seedd/internal/server/: server.go
components/seedgen/seedd/internal/service/: callgraph.go  functions.go  get_region_source.go  run_seeds.go
components/seedgen/seedd/internal/utils/: compilation_database.go
components/seedgen/seedgen2/: presets.py  seedcodex.py  seedgen.py  seedmcp.py  seedmini.py  test.py
components/seedgen/seedgen2/agents/: alignment.py  coverage.py  filetype.py  glance.py  predicates.py
components/seedgen/seedgen2/graphs/: codexbot.py  cotbot.py  jsonbot.py  mcpbot.py  plainbot.py  refbot.py  sowbot.py
components/seedgen/seedgen2/protobuf/: seedd_pb2.py  seedd_pb2.pyi  seedd_pb2_grpc.py
components/seedgen/seedgen2/utils/: callgraph.py  coverage.py  functions.py  generators.py  grpc.py  seeds.py  singleton.py  tracker.py
components/seedgen/utils/: db.py  task.py  telemetry.py
deployment/: .env.example  .gitignore  Makefile
(+555 files in other folders)
