[project]
name = "seedgen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "grpcio==1.70.0",
    "grpcio-health-checking==1.70.0",
    "grpcio-reflection==1.70.0",
    "grpcio-status==1.70.0",
    "grpcio-tools==1.70.0",
    "jsonschema==4.23.0",
    "langchain-anthropic==0.3.4",
    "langchain-community==0.3.15",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai==0.3.2",
    "langgraph==0.2.67",
    "libclang==18.1.1",
    "matplotlib==3.10.0",
    "mcp-agent>=0.0.1",
    "mcp-server-fetch>=2025.4.7",
    "mcp-server-tree-sitter>=0.5.1",
    "mypy-protobuf==3.6.0",
    "networkx==3.4.2",
    "openlit==1.33.11",
    "opentelemetry-api==1.30.0",
    "opentelemetry-exporter-otlp==1.30.0",
    "opentelemetry-sdk==1.30.0",
    "pika==1.3.2",
    "psycopg2-binary>=2.9.11",
    "pytest==8.3.4",
    "redis==5.2.1",
    "sqlalchemy==2.0.37",
    "uv>=0.9.3",
]
